[gd_scene load_steps=12 format=2]

[ext_resource path="res://Tetrominos/Piece_I.gd" type="Script" id=1]
[ext_resource path="res://Tetrominos/Piece_L.gd" type="Script" id=2]
[ext_resource path="res://Tetrominos/Piece_S.gd" type="Script" id=3]
[ext_resource path="res://Tetrominos/Piece_O.gd" type="Script" id=4]
[ext_resource path="res://Tetrominos/Piece_Z.gd" type="Script" id=5]
[ext_resource path="res://Tetrominos/Piece_T.gd" type="Script" id=6]
[ext_resource path="res://Tetrominos/PieceRandomizer.gd" type="Script" id=7]
[ext_resource path="res://Tetrominos/Piece_J.gd" type="Script" id=8]
[ext_resource path="res://Grid/GridRenderer.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Game/TetrisGrid/RetmisGrid.gd" type="Script" id=10]
[ext_resource path="res://Tetrominos/ActivePiece.gd" type="Script" id=11]

[node name="RetmisGrid" type="Node2D"]
script = ExtResource( 10 )

[node name="Pieces" type="Node2D" parent="."]

[node name="Piece_J" type="Node2D" parent="Pieces"]
script = ExtResource( 8 )

[node name="Piece_L" type="Node2D" parent="Pieces"]
script = ExtResource( 2 )

[node name="Piece_O" type="Node2D" parent="Pieces"]
script = ExtResource( 4 )

[node name="Piece_I" type="Node2D" parent="Pieces"]
script = ExtResource( 1 )

[node name="Piece_S" type="Node2D" parent="Pieces"]
script = ExtResource( 3 )

[node name="Piece_T" type="Node2D" parent="Pieces"]
script = ExtResource( 6 )

[node name="Piece_Z" type="Node2D" parent="Pieces"]
script = ExtResource( 5 )

[node name="PieceRandomizer" type="Node2D" parent="Pieces"]
script = ExtResource( 7 )

[node name="Grid" type="Node2D" parent="."]

[node name="GridRenderer" type="Node2D" parent="Grid"]
z_index = 1
script = ExtResource( 9 )

[node name="ActivePiece" type="Node2D" parent="Grid/GridRenderer"]
script = ExtResource( 11 )

[node name="DropTimer" type="Timer" parent="Grid/GridRenderer/ActivePiece"]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="Grid/GridRenderer/ActivePiece/DropTimer" to="Grid/GridRenderer/ActivePiece" method="_on_DropTimer_timeout"]
